questions.txt
Q1. All the files that are created from typing "make bst" for the first time
    are BSTInt.o, BSTNodeInt.o, and testBST.o.
Q2. 
BSTInt.cpp: In function 'bool insert(int)':
BSTInt.cpp:25:8: error: 'root' was not declared in this scope
   if (!root) {
        ^
BSTInt.cpp:27:7: error: 'isize' was not declared in this scope
     ++isize;
       ^
BSTInt.cpp:31:22: error: 'root' was not declared in this scope
   BSTNodeInt* curr = root;
                      ^
BSTInt.cpp:56:5: error: 'isize' was not declared in this scope
   ++isize;
     ^
make: *** [BSTInt.o] Error 1

    This error occurs because the scope of the insert() function is not
    specified as under the BSTInt class, and the variables, root and isize,
    are defined as private within the BSTInt class. Therefore, root and isize
    cannot be accessed or called without defining the scope under the BSTInt 
    class. 
